# weft-cli

./: .dockerignore  .env.example  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CNAME  Dockerfile  Dockerfile.watcher  README.md  SECURITY.md  docker-compose.yml  index.html  install.sh  mkdocs.yml  pyproject.toml  requirements-lock.txt  requirements.txt  sitemap.xml  weft-validate.py
.github/: BRANCH_PROTECTION.md
.github/workflows/: ci.yml  docs.yml  release.yml  test-install.yml  update-homebrew.yml
.weft/: .gitignore
agents/: index.html
architecture/: index.html
cli-reference/: index.html
community/CHANGELOG/: index.html
community/CONTRIBUTING/: index.html
community/LICENSE/: index.html
community/SECURITY/: index.html
configuration/: index.html
development/: index.html
docker/: docker-compose.dev.yml
docs/: agents.md  architecture.md  cli-reference.md  configuration.md  development.md  index.md  installation.md  release.md  troubleshooting.md
docs/community/: CONTRIBUTING.md  LICENSE.md  SECURITY.md
docs/stylesheets/: extra.css
homebrew/: README.md  weft.rb
installation/: index.html
release/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/AGENTS/: index.html
site/ARCHITECTURE/: index.html
site/CLI-REFERENCE/: index.html
site/CONFIGURATION/: index.html
site/DEVELOPMENT/: index.html
site/DOCS-README/: index.html
site/INSTALLATION/: index.html
site/REDUNDANCY-REVIEW/: index.html
site/TROUBLESHOOTING/: index.html
site/community/CHANGELOG/: index.html
site/community/CONTRIBUTING/: index.html
site/community/LICENSE/: index.html
site/community/SECURITY/: index.html
site/internal/documentation/: index.html
site/internal/release-process/: index.html
site/internal/testing-install/: index.html
site/search/: search_index.json
src/weft.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/weft/agents/: __init__.py  base_spec_agent.py  discovery.py  orchestration.py
src/weft/agents/architect/: .env  config.yaml
src/weft/agents/integration/: config.yaml
src/weft/agents/meta/: config.yaml
src/weft/agents/openapi/: .env  config.yaml
src/weft/ai/: __init__.py  backend.py  claude_client.py
src/weft/audit/: hashing.py
src/weft/cli/: init.py  main.py  status.py
src/weft/code/: applier.py  models.py
src/weft/config/: __init__.py  env.py  errors.py  project.py  resolver.py  settings.py  user.py
src/weft/git/: __init__.py  exceptions.py  worktree.py
src/weft/history/: __init__.py  repo_manager.py
src/weft/queue/: models.py
src/weft/scripts/: __init__.py  run_watcher.py
src/weft/state/: feature_state.py
src/weft/templates/: .env.weft.common  .weftrc.yaml  docker-compose.yml
src/weft/utils/: __init__.py
src/weft/watchers/: base.py
templates/: README.md  weft-enhancement.md  weft-self-development-cheatsheet.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_agent_pipeline.py  test_config_e2e.py  test_feature_workflow.py
tests/unit/: __init__.py  test_weft_validate.py
troubleshooting/: index.html
(+56 files in other folders)
